# src/storage/api-docs/api-docs.json
@@ -191,6 +191,70 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Update a task resource.",
+                "operationId": "App\\Http\\Controllers\\TaskController::update",
+                "parameters": [
+                    {
+                        "name": "task",
+                        "in": "path",
+                        "description": "ID of Task",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "$ref": "#/components/schemas/Task:update"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/Task"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400-599": {
+                        "description": "unsuccessful operation",
+                        "content": {
+                            "application/problem+json": {
+                                "schema": {
+                                    "type": "object",
+                                    "allOf": [
+                                        {
+                                            "$ref": "#/components/schemas/ProblemResponse"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
             }
         },
         "/todos": {
@@ -559,10 +623,21 @@
                 },
                 "type": "object"
             },
+            "Task:update": {
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "name": {
+                        "description": "Class Task",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
             "Task": {
                 "required": [
                     "id",
-                    "name",
                     "todo_id"
                 ],
                 "properties": {
@@ -571,10 +646,6 @@
                         "type": "integer",
                         "readOnly": true
                     },
-                    "name": {
-                        "description": "Class Task",
-                        "type": "string"
-                    },
                     "todo_id": {
                         "description": "Class Task",
                         "type": "integer"
@@ -582,6 +653,9 @@
                 },
                 "type": "object",
                 "allOf": [
+                    {
+                        "$ref": "#/components/schemas/Task:update"
+                    },
                     {
                         "$ref": "#/components/schemas/Timestampable"
                     }
